# Chess

./: .gitignore  Bishop.h  Board.h  CMakeLists.txt  CMakeUserPresets.json  Cell.h  Chess.cpp  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  ChessPiece.h  ChessPieceBuilder.h  Constants.h  King.h  Knight.h  Pawn.h  Queen.h  README.md  Rook.h
src/: Board.h  Cell.h  Chess.cpp  ChessPiece.h  Constants.h  Enums.h  EventHandler.h  GameManager.h
src/board/: Board.h  BoardManager.h  BoardRenderer.h  Cell.h
src/constants/: Constants.h
src/moves/: MoveExecutor.h  MoveValidator.h
src/pieces/: ChessPiece.h
src/ui/: SoundManager.h  UIManager.h
